[project]
name = "unicodeplots"
version = "0.11.0"
description = "UnicodePlots.jl but in python "
readme = "README.md"
requires-python = ">=3.11"

[project.optional-dependencies]
numpy = ["numpy>=2.0.0"]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.1.0",
    "pytest>=8.3.5",
    "pytest-snapshot>=0.9.0",
    "ruff>=0.11.0",
]

[tool.setuptools]
packages = [
    "unicodeplots",
    "unicodeplots.canvas",
    "unicodeplots.plots",
    "unicodeplots.components",
    "unicodeplots.utils",
]
